feat: signin by role
