# src/auth/auth.controller.ts
@@ -9,7 +9,7 @@ import {
 } from "./decorators";
 import { ApiJfds } from "src/docs/decorators";
 import { User } from "src/model";
-import { Whoami, SigninPayload, SignupPayload } from "./model";
+import { Whoami, SigninPayload, SignupPayload, SigninByRole } from "./model";
 
 @Controller()
 @ApiTags("Security")
@@ -30,6 +30,16 @@ export class AuthController {
     @AuthenticatedUserToken() token: string
   ) {
     return this.authService.whoami(token, user);
+  }
+
+  @Post("/signin-by-role")
+  @ApiBody({ type: SigninByRole })
+  @ApiJfds({
+    type: Whoami,
+    operationId: "signinByRole",
+  })
+  async signinByRole(@Body() signinByRole: SigninByRole) {
+    return this.authService.signinByRole(signinByRole);
   }
 
   @Post("/signin")
