# src/auth/model/index.ts
@@ -2,3 +2,4 @@ export * from "./jwt";
 export * from "./signin";
 export * from "./signup";
 export * from "./whoami";
+export * from "./signin-by-role";
