# src/auth/model/signin-by-role.ts
@@ -1,0 +1,25 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { Role } from "src/model";
+
+export class SigninByRole {
+  @ApiProperty()
+  role: Role;
+
+  @ApiProperty()
+  firstName?: string;
+
+  @ApiProperty()
+  lastName?: string;
+
+  @ApiProperty()
+  responsabilityId?: string;
+
+  @ApiProperty()
+  committeeId?: string;
+
+  @ApiProperty()
+  associationId?: string;
+
+  @ApiProperty()
+  regionId?: string;
+}
